@@ -1,4 +1,5 @@
 3.8.5
+- products_catalogue's MySQL db dump now is compatible with MySQL 5.5 (#3420403)
 
 3.8.4
 - "meta viewport" tag was added to mask's HTML for a better mobile rendering
